# animal_turn

./: model.ipynb  pyproject.toml  scrape.ipynb
