[tool.poetry]
name = "animal_turn"
version = "0.1.0"
description = "Scraping and analysis code for Animal Turn special collection at NC State University Libraries"
authors = ["Scott Bailey <csb5t@virginia.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
pandas = "^1.0.5"
spacy = "^2.3.0"
textacy = "^0.10.0"
scikit-learn = "^0.23.1"
seaborn = "^0.10.1"
gensim = "^3.8.3"
bokeh = "^2.1.0"
ipykernel = "^5.3.0"
nltk = "^3.5"
pyLDAvis = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
